#cmake version
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(apriltag)

SET(APRILTAG_MAJOR 0)
SET(APRILTAG_MINOR 91)
SET(APRILTAG_VERSION ${APRILTAG_MAJOR}-${APRILTAG_MINOR})
SET(APRILTAG_NAME apriltag)
SET(APRILTAG_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
SET(APRILTAG_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)

# to distinguish between debug and release lib
SET(CMAKE_DEBUG_POSTFIX "d")

FILE(
    GLOB_RECURSE
    APRILTAG_SOURCE_FILES
    ${APRILTAG_SRC_DIR}/*
)

FILE(
    GLOB_RECURSE
    APRILTAG_INCLUDE_FILES
    ${APRILTAG_INCLUDE_DIR}/*.h*
)

INCLUDE_DIRECTORIES(${APRILTAG_INCLUDE_DIR})

IF(BUILD_SHARED_LIBS)
    ADD_LIBRARY(${APRILTAG_NAME} SHARED ${APRILTAG_SOURCE_FILES} ${APRILTAG_INCLUDE_FILES})
ELSE(BUILD_SHARED_LIBS)
    ADD_LIBRARY(${APRILTAG_NAME} STATIC ${APRILTAG_SOURCE_FILES} ${APRILTAG_INCLUDE_FILES})
ENDIF(BUILD_SHARED_LIBS)

IF(WIN32)
    #TODO
ELSE(WIN32)
    SET(CMAKE_C_FLAGS "-std=gnu99" CACHE STRING "" FORCE)
    TARGET_LINK_LIBRARIES(${APRILTAG_NAME} pthread m)
ENDIF(WIN32)

INSTALL(TARGETS ${APRILTAG_NAME}
        RUNTIME DESTINATION "${CMAKE_INSTALL_PREFIX}/bin"
        ARCHIVE DESTINATION "${CMAKE_INSTALL_PREFIX}/lib"
        LIBRARY DESTINATION "${CMAKE_INSTALL_PREFIX}/lib" )

INSTALL(FILES ${APRILTAG_INCLUDE_FILES} DESTINATION "${CMAKE_INSTALL_PREFIX}/include")

# Example binaries
ADD_EXECUTABLE(tagtest test/tagtest.c)
TARGET_LINK_LIBRARIES(tagtest ${APRILTAG_NAME})
